@startuml Types
skinparam style strictuml
skinparam monochrome false

interface ASTNode #b1e8f0 {
    getLine(): int
    getColumn(): int
}

interface Type {
    getNumberOfBytes() : int
    getSuffix() : String
    convert(Type) : String
    toInt() : String
    arithmetic(Type) : Type
    negative() : Type
    booleanNot() : Type
    indexing(Type) : Type
    dot(String) : Type
    cast(Type) : Type
    assign(Type) : Type
    subtype(Type) : Type
    comparison(Type) : Type
    logical(Type) : Type
    asParam(Type) : Type
    isBoolean() : Type
    isIndexable() : booleanNot
    isStruct() : booleanNot
}

class FuncType {
    params : List<VarDefinition>
    returnType : Type
}

' Tipos simples
class IntType
class DoubleType
class CharType

' Tipo error
class ErrorType

' Tipos complejos
class Array {
    size : int
    type : Type
}

class Struct {
    fields : List<StructField>
}

class StructField {
    line : int
    column : int
    name : String
    type : Type
    offset : int
}

Type <|.. IntType
Type <|.. DoubleType
Type <|.. CharType
Type <|.. Array
Type <|.. Struct
Type <|.. FuncType
Type <|.. ErrorType

ASTNode <|-- Type
StructField --o Struct

@enduml
